[package]
name = "sapp-cli"
version = "0.1.0"
authors = ["Lukas Krickl <lukas@krickl.dev>"]
description = "Sapp is a simple sprite sheet preprocessor that allows mirroring and copying tiles based on a configuration file"
license = "MIT"
homepage = "https://github.com/unlink2/sapp"
edition = "2021"

[[bin]]
name = "sapp"
path = "src/main.rs"

[dependencies]
sapp = {version="0.1.0", path = "../lib"}
